--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -24,6 +24,18 @@
   .section p {
     margin: 10px 0;
   }
+
+  .image-container {
+    max-width: 100%; /* La imagen no superará el ancho del contenedor */
+    overflow: hidden; /* Recorta la imagen si es más grande que el contenedor */
+  }
+  
+  .image-container img {
+    width: 100%; /* La imagen ocupará todo el ancho del contenedor */
+    height: auto; /* La altura se ajustará automáticamente para mantener la proporción */
+    max-width: 100%; /* La imagen no superará el ancho del contenedor */
+    max-height: 200px; /* Establece la altura máxima deseada */
+  }
   
   .section a {
     display: block;
