--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -46,3 +46,10 @@
     border-radius: 3px;
     margin-top: 10px;
   }
+
+  /* Estilos para pantallas más pequeñas (botones apilados) */
+@media screen and (max-width: 1000px) {
+  .section {
+    width: 90%; /* Ajusta el ancho de las secciones según tus preferencias */
+  }
+}
